--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-03  Andrew Haley  <aph@redhat.com>
+
+	* libjava.lang/Array_3.java (baz): New.
+	(main): Call baz.
+
 2002-09-29  Anthony Green  <green@redhat.com>
 
 	* libjava.lang/TestProxy.java: New file.
