--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -163,7 +163,9 @@
 			  sse,ssemov,sseadd,ssemul,ssecmp,ssecvt,ssediv")
 	   (const_string "sse")
 	 (eq_attr "type" "mmx,mmxmov,mmxadd,mmxmul,mmxcmp,mmxcvt,mmxshft")
-	   (const_string "mmx")]
+	   (const_string "mmx")
+	 (eq_attr "type" "other")
+	   (const_string "unknown")]
 	 (const_string "integer")))
 
 ;; The (bounding maximum) length of an instruction immediate.
@@ -17327,7 +17329,7 @@
   [(set (match_operand:SI 0 "register_operand" "")
   	(subreg:SI (mult:DI (match_operand:DI 1 "register_operand" "")
 		   (match_operand:DI 2 "const_int_operand" "")) 0))]
-  "exact_log2 (INTVAL (operands[1])) >= 0
+  "exact_log2 (INTVAL (operands[2])) >= 0
    && REGNO (operands[0]) == REGNO (operands[1])
    && peep2_regno_dead_p (0, FLAGS_REG)"
   [(parallel [(set (match_dup 0) (ashift:SI (match_dup 0) (match_dup 2)))
