2002-10-03  Michael Koch  <konqueror@gmx.de>
	* java/net/InetAddress.java
	(class InetAddress): Removed final keyword.
	(equals): Fixed typo.
	(getByAddress): New method.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57779 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,12 @@
 2002-10-03  Michael Koch  <konqueror@gmx.de>
 
+	* java/net/InetAddress.java
+	(class InetAddress): Removed final keyword.
+	(equals): Fixed typo.
+	(getByAddress): New method.
+
+2002-10-03  Michael Koch  <konqueror@gmx.de>
+
 	* java/awt/dnd/Autoscroll.java:
 	New file, merge from Classpath.
 	* java/awt/dnd/DragSourceAdapter.java:
