* Makefile.in: Rebuilt. 	* Makefile.am (awt_java_source_files): Added new files.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57781 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-03  Tom Tromey  <tromey@redhat.com>
+
+	* Makefile.in: Rebuilt.
+	* Makefile.am (awt_java_source_files): Added new files.
+
 2002-10-03  Michael Koch  <konqueror@gmx.de>
 
 	* java/net/InetAddress.java
