--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2002-10-03  Nathanael Nerode  <neroden@gcc.gnu.org>
 
+	* Makefile.tpl: Make SET_LIB_PATH substitution more autoconfy.
+	* configure.in: Make SET_LIB_PATH substitution more autoconfy.
+	* Makefile.in: Regenerate.
+
 	* Makefile.tpl: Make RPATH_ENVVAR substitution more autoconfy.
 	* configure.in: Make RPATH_ENVVAR substitution more autoconfy.
 	* Makefile.in: Regenerate.
