--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-10-03  Jakub Jelinek  <jakub@redhat.com>
 
+	* longlong.h (__udiv_qrnnd): Remove PARAMS from prototype.
+
+2002-10-03  Jakub Jelinek  <jakub@redhat.com>
+
 	* gcc.c (print_multi_os_directory): New variable.
 	(option_map): Support --print-multi-os-directory.
 	(struct prefix_list): Add os_multilib field.
