--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Thu Oct  3 23:15:15 CEST 2002  Jan Hubicka  <jh@suse.cz>
+
+	* i386.h (CPP_SPECS): fix defines for -msse, -msse2, -mpentium2,3.
+
 Thu Oct  3 21:35:36 CEST 2002  Jan Hubicka  <jh@suse.cz>
 
 	* toplev.c (rest_of_compilation): Dump loops before clobbering
