2002-10-03  Adam Megacz <adam@xwt.org>
	    * natNetworkInterface.cc (getRealNetworkInterfaces): ifdef out
	    some functionality that isn't supported yet on WIN32.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57794 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-03  Adam Megacz <adam@xwt.org>
+
+	* natNetworkInterface.cc (getRealNetworkInterfaces): ifdef out
+	some functionality that isn't supported yet on WIN32.
+
 2002-10-03  Tom Tromey  <tromey@redhat.com>
 
 	* Makefile.in: Rebuilt.
