--- a/gcc/config/i960/i960.md
+++ b/gcc/config/i960/i960.md
@@ -2292,8 +2292,8 @@
   ""
   "
 {
-  emit_insn (gen_call_internal (operands[0], operands[1],
-				virtual_outgoing_args_rtx));
+  emit_call_insn (gen_call_internal (operands[0], operands[1],
+				     virtual_outgoing_args_rtx));
   DONE;
 }")
 
@@ -2322,8 +2322,9 @@
   ""
   "
 {
-  emit_insn (gen_call_value_internal (operands[0], operands[1], operands[2],
-				      virtual_outgoing_args_rtx));
+  emit_call_insn (gen_call_value_internal (operands[0], operands[1],
+					   operands[2],
+				           virtual_outgoing_args_rtx));
   DONE;
 }")
 
