--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-10-03  Richard Henderson  <rth@redhat.com>
 
+	* real.h (struct real_value): Use ENUM_BITFIELD.
+
+2002-10-03  Richard Henderson  <rth@redhat.com>
+
 	* config/i960/i960.md (call, call_value): Use emit_call_insn.
 
 2002-10-03  Steve Ellcey  <sje@cup.hp.com>
