--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-10-04  Alan Modra  <amodra@bigpond.net.au>
+
+	* config/rs6000/rs6000.c (rs6000_output_function_epilogue): Use a
+	name for the tbtab label that depends on the function asm name.
+	Don't output tbtab label unless optional_tbtab.
+	(output_mi_thunk): Formatting.
+
 2002-10-03  Richard Henderson  <rth@redhat.com>
 
 	* config/m68k/m68k.h (OVERRIDE_OPTIONS): Move additional code ...
