--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-03  Mark Mitchell  <mark@codesourcery.com>
+
+	* doc/invoke.texi (-Wabi): Document mangling bug.
+
 2002-10-04  Alan Modra  <amodra@bigpond.net.au>
 
 	* config/rs6000/rs6000.c (rs6000_output_function_epilogue): Use a
