--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,11 @@
+2002-10-04  Michael Koch  <konqueror@gmx.de>
+
+	* java/beans/beancontext/BeanContextChildSupport.java:
+	Added serialVersionUID.
+	* java/text/Collator.java: (compare): Made documentation HTML-aware.
+	* javax/naming/BinaryRefAddr.java: Added serialVersionUID.
+	* javax/naming/Name.java: Added serialVersionUID.
+
 2002-10-03  Adam Megacz <adam@xwt.org>
 
 	* natNetworkInterface.cc (getRealNetworkInterfaces): ifdef out
