2002-10-04  Michael Koch  <konqueror@gmx.de>
	* java/net/InetAddress.java:
	(isMulticastAddress): Added documentation.
	(getHostAddress): Added documentation.
	(toString): Added documentation.
	(getByAddress): Fixed documentation.
	(getByName): Added documentation.
	(getAllByName): Added documentation.
	(getLocalHost): Added documentation.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57814 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,16 @@
 2002-10-04  Michael Koch  <konqueror@gmx.de>
 
+	* java/net/InetAddress.java:
+	(isMulticastAddress): Added documentation.
+	(getHostAddress): Added documentation.
+	(toString): Added documentation.
+	(getByAddress): Fixed documentation.
+	(getByName): Added documentation.
+	(getAllByName): Added documentation.
+	(getLocalHost): Added documentation.
+
+2002-10-04  Michael Koch  <konqueror@gmx.de>
+
 	* java/beans/beancontext/BeanContextChildSupport.java:
 	Added serialVersionUID.
 	* java/text/Collator.java: (compare): Made documentation HTML-aware.
