* mips.c (mips_const_double_ok): Delete unused variable.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57817 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2002-10-04  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
+	* mips.c (mips_const_double_ok): Delete unused variable.
+
 	* gengtype.c (rtx_next): Change type to int.
 
 2002-10-04  Andreas Jaeger  <aj@suse.de>
