2002-10-03  Michael Koch  <konqueror@gmx.de>
	* gcj.texi (Standard properties):
	Change default of java.awt.toolkit to gnu.awt.gtk.GtkToolkit.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57819 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-03  Michael Koch  <konqueror@gmx.de>
+
+	* gcj.texi (Standard properties):
+	Change default of java.awt.toolkit to gnu.awt.gtk.GtkToolkit.
+
 2002-10-02  Roger Sayle  <roger@eyesopen.com>
 
 	PR optimization/6627
