--- a/gcc/java/gcj.texi
+++ b/gcc/java/gcj.texi
@@ -2117,7 +2117,7 @@ Returned by @code{java.awt.Window.getWarningString()} when the window is
 
 @item awt.toolkit
 The class name used for initializing the default @code{java.awt.Toolkit}. 
-Defaults to @code{gnu.java.awt.peer.gtk.GtkToolkit}.
+Defaults to @code{gnu.awt.gtk.GtkToolkit}.
 
 @end table
 
