--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-04  Mark Wielaard  <mark@klomp.org>
+
+	* java/lang/Throwable.java: Remerge with Classpath.
+
 2002-10-04  Michael Koch  <konqueror@gmx.de>
 
 	* java/net/InetAddress.java:
